# notmuch-arrow-haskell

./: .gitignore  notmuch-arrow-haskell.cabal  shell.nix
src/System/Mail/: Notmuch.hs
src/System/Mail/Notmuch/: Arrow.hs  Binding.hsc  Utils.hs  Wrapper.hs
src/System/Mail/Notmuch/Wrapper/: Template.hs
