
name:                notmuch-arrow-haskell
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     System.Mail.Notmuch
  other-modules:       System.Mail.Notmuch.Binding
                     , System.Mail.Notmuch.Wrapper
                     , System.Mail.Notmuch.Arrow
                     , System.Mail.Notmuch.Utils
  extra-libraries:     notmuch
  hs-source-dirs:      src/
  build-depends:       base >= 4.9 && < 4.10
                     , array, containers, transformers, directory
                     , mtl, bytestring, template-haskell, hxt
                     , data-default
  build-tools:         hsc2hs
  ghc-options:         -Wall
  default-language:    Haskell2010

